@@ -99,6 +99,7 @@ test_programs =					\
 	type-test				\
 	unicode-caseconv			\
 	unicode-encoding			\
+	utf8-validate				\
 	uri-test
 
 test_scripts = run-markup-tests.sh
@@ -151,6 +152,7 @@ tree_test_LDADD = $(progs_ldadd)
 type_test_LDADD = $(progs_ldadd)
 unicode_encoding_LDADD = $(progs_ldadd)
 unicode_caseconv_LDADD = $(progs_ldadd)
+utf8_validate_LDADD = $(progs_ldadd)
 uri_test_LDADD = $(progs_ldadd)
 
 lib_LTLIBRARIES = libmoduletestplugin_a.la libmoduletestplugin_b.la
